fix: content height set to 400 to avoid overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-$content-height: 500px;
+$content-height: 400px;
 
 .active-link {
 	color: white;
